Show names instead of About, fix horizontal scroll

--- a/themes/Fifteen/style.css
+++ b/themes/Fifteen/style.css
@@ -789,6 +789,7 @@ hr {
 	opacity: .2;
 	margin: 0;
 	margin-bottom: -11px;
+    overflow: hidden;
 	z-index: 999;
 }
 
